CE-52 Create an Overview of previous CAD-Scores
* Implemented scoring history table showing all previous CAD Scores of a User simplified
* Implemented the possibility to enter Patient information and see only the simplified CAD Scores for a specific Patient
* Implemented the possibility to enter Patient Information when requesting a CAD Score

Approved-by: Angelo Meisel

--- a/CE-UI/src/app/app.component.html
+++ b/CE-UI/src/app/app.component.html
@@ -1,5 +1,7 @@
 <mat-toolbar color="primary">
-    <a class="title" href="/">{{ title }}</a>
+  <a class="title" href="/">Show History</a>
+  <div class="toolbar-spacer"></div>
+    <a class="title" href="/patient/new">Create new Patient</a>
   
     <div class="toolbar-spacer"></div>
   
