--- a/CE-UI/src/app/score/score.component.html
+++ b/CE-UI/src/app/score/score.component.html
@@ -1,4 +1,4 @@
 <p [ngClass]="[score.classifier_type+'']">{{ score.message }}</p>
-<p>Score: {{ score.score }}</p>
-<p>Timestamp: {{ score.timestamp }}</p>
-<p>Enduser: {{ score.username }}</p>
+<p>Score: {{ score.classifier_score }}</p>
+<p>Timestamp: {{ score.createdOn }}</p>
+<p>Sign: {{ score.classifier_sign }}</p>
