CE-37 User information input form
* Implemented a view for Onboarding users into the Cardio Explorer Application
* View allows for entering basic user information and specific settings relevant for CAD scores (Clinical Setting and Unit Lab Values)

Approved-by: Philipp Schlegel

--- a/CE-UI/src/app/profile/profile.component.html
+++ b/CE-UI/src/app/profile/profile.component.html
@@ -1,6 +1,81 @@
-<div>
+<!-- <div>
     <p><strong>First Name: </strong> {{profile?.givenName}}</p>
     <p><strong>Last Name: </strong> {{profile?.surname}}</p>
     <p><strong>Email: </strong> {{profile?.userPrincipalName}}</p>
     <p><strong>Id: </strong> {{profile?.id}}</p>
-</div>
+</div> -->
+<form [formGroup]="updatedUser" (ngSubmit)="onSubmit()">
+    <div>
+        <h2>Identity Settings</h2>
+        <hr>
+        <label for="username">Username</label>
+        <input readonly id="username" type="text" formControlName="username" [(ngModel)]="updatedUserProfile.username">
+        <label for="emailAdress">E-mail</label>
+        <input readonly id="emailAdress" type="email" formControlName="emailAdress" [(ngModel)]="updatedUserProfile.emailAdress">
+    </div>
+    <div>
+        <h2>General Settings</h2>
+        <hr>
+        <label for="salutation">Salutation</label>
+        <select name="salutation" id="salutation" formControlName="salutation" [(ngModel)]="updatedUserProfile.salutation">
+            <option value="mr">Mr.</option>
+            <option value="ms">Ms.</option>
+            <option value="msr">Msr.</option>
+        </select>
+        <label for="title">Title</label>
+        <input id="Title" type="text" formControlName="title" [(ngModel)]="updatedUserProfile.title">
+        <label for="firstname">First Name</label>
+        <input id="firstname" type="text" value="user" formControlName="firstName" [(ngModel)]="updatedUserProfile.firstName">
+        <label for="surname">Last Name</label>
+        <input id="surname" type="text" formControlName="surname" [(ngModel)]="updatedUserProfile.surname">
+        <label for="professionalspecialisation">Professional Specialisation</label>
+        <input id="professionalspecialisation" type="text" formControlName="professionalSpecialisation" [(ngModel)]="updatedUserProfile.professionalSpecialisation">
+        <label for="department">Department</label>
+        <input id="department" type="text" formControlName="department" [(ngModel)]="updatedUserProfile.department">
+        <label for="preferredlab">Preferred Lab for Cardio Explorer test analysis</label>
+        <input id="preferredlab" type="text" formControlName="preferredLab" [(ngModel)]="updatedUserProfile.preferredLab">
+        <label for="adress">Adress</label>
+        <input id="adress" type="text" formControlName="address" [(ngModel)]="updatedUserProfile.address">
+        <label for="zip">ZIP</label>
+        <input id="zip" type="text" formControlName="zipCode" [(ngModel)]="updatedUserProfile.zipCode">
+        <label for="city">City</label>
+        <input id="city" type="text" formControlName="city" [(ngModel)]="updatedUserProfile.city">
+        <label for="countrycode">Country Code</label>
+        <select #countryCode name="countrycode" id="countrycode" (change)="getSelectedCountry(countryCode.value)" formControlName="countryCode" [(ngModel)]="updatedUserProfile.countryCode">
+            <option *ngFor="let code of countryCodes" [value]="code.name">{{code.name}}</option>
+        </select>
+        <label for="telephoneNumber">telephoneNumber</label>
+        <input id="telephoneNumber" type="text" [value]="userProfile?.telephoneNumber" formControlName="telephoneNumber" [(ngModel)]="updatedUserProfile.telephoneNumber">
+        <label for="language">Language</label>
+        <select name="language" id="language" [value]="userProfile?.language" formControlName="language" [(ngModel)]="updatedUserProfile.language">
+            <option value="english">English</option>
+            <option value="deutsch">Deutsch</option>
+            <option value="français">Français</option>
+        </select>
+        <label for="unitLabValues">Units lab values</label>
+        <select name="unitLabValues" id="unitLabValues" [value]="userProfile?.unitLabValues" formControlName="unitLabValues" [(ngModel)]="updatedUserProfile.unitLabValues">
+            <option value="si">SI</option>
+            <option value="conventional">Conventional</option>
+        </select>
+        <label for="first">I perform a first clinical evaluation of patients with suspected Coronary Artery
+            Disease</label>
+        <input id="first" type="radio" name="clinicalSetting" value="0" [checked]="userProfile?.clinicalSetting === 0" formControlName="clinicalSetting" [(ngModel)]="updatedUserProfile.clinicalSetting">
+        <label for="second">I perform a secondary clinical evaluation of patients with suspected Coronary Artery
+            Disease, to
+            decide on further diagnostic procedure (e.g., cardiac imaging tests, invasive coronary angiography)</label>
+        <input id="second" type="radio" name="clinicalSetting" value="1" [checked]="userProfile?.clinicalSetting === 1" formControlName="clinicalSetting" [(ngModel)]="updatedUserProfile.clinicalSetting">
+        <p>Medical specialist</p>
+        <ul>
+            <li>General practitioner</li>
+            <li>Endocrinologists</li>
+            <li>Diabetologists</li>
+            <li>Other non-cardiology resident medical specialist</li>
+        </ul>
+        <label for="seperatebilling">Seperate Billing</label>
+        <select name="seperatebilling" id="seperatebilling" [value]="userProfile?.seperateBilling" formControlName="seperateBilling" [(ngModel)]="updatedUserProfile.seperateBilling">
+            <option value="true">Yes</option>
+            <option value="false">No</option>
+        </select>
+        <button type="submit">Update</button>
+    </div>
+</form>
