--- a/CE-UI/src/app/patient-details/patient-details.component.html
+++ b/CE-UI/src/app/patient-details/patient-details.component.html
@@ -1,6 +1,27 @@
-<h1>Patient data (Units lab values: Conventional)</h1>
-<button (click)="submit()" >Submit</button>
-<app-score *ngIf="scoreResponseReceived" [score]="scoreResponse"></app-score>
-<app-patient-data-form [biomarkers]="biomarkerTemplate" [patient]="patient" [uniqueCategories]="uniqueCategories"></app-patient-data-form>
-<app-score *ngIf="scoreResponseReceived" [score]="scoreResponse"></app-score>
-<button (click)="submit()" [disabled]="submitButtonDisabled()">Submit</button>
+<div class="w-full flex flex-col place-content-center">
+  <div class="mt-8 flex flex-col self-center w-2/3">
+    <p class="text-primary text-2xl font-semibold mb-8">Create New Score</p>
+    <app-score
+      *ngIf="scoreResponseReceived"
+      [score]="scoreResponse"
+    ></app-score>
+    <app-patient-data-form
+      [biomarkers]="biomarkerTemplate"
+      [patient]="patient"
+      [uniqueCategories]="uniqueCategories"
+    ></app-patient-data-form>
+    <app-score
+      *ngIf="scoreResponseReceived"
+      [score]="scoreResponse"
+    ></app-score>
+    <div class="flex flex-row-reverse mt-6">
+      <button
+        class="pl-6 pr-6 pt-2 pb-2 enabled:bg-secondary  enabled:text-white disabled:bg-label-2 disabled:text-white rounded-md border gap-2"
+        (click)="submit()"
+        [disabled]="submitButtonDisabled()"
+      >
+        Calculate Risk Score
+      </button>
+    </div>
+  </div>
+</div>
